# raylib-project

./: .gitmodules  CMakeLists.txt  README.md
scripts/: Build.bat  Compile.bat
src/: main.cpp
src/core/: CMakeLists.txt  base_types.hpp
src/core/ecs/: components.hpp  ecs_mngr.cpp  ecs_mngr.hpp  entity.hpp  system.hpp
src/core/game/: game.cpp  game.hpp
src/core/systems/: texture_system.cpp  texture_system.hpp
